# python-reddit-youtube-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  app2.py  args.py  base64_encoding.py  bing.py  comment_screenshot.py  config-example.yml  csvmgr.py  data.csv  docker-compose.yml  keywords.py  lexica.py  login.py  policy.xml  pyproject.toml  reddit.py  referral.txt  refresh_token.py  requirements-dev.txt  requirements.txt  rybo.yaml  settings.py  speech.py  streamlabs_polly.py  test.py  test_change.sh  test_upload.py  thumbnail.py  thumbnail2.py  tiktok.py  upload.py  video.py  youtube.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: pr.yml  tssvibelounge.yml
comment_templates/dark_reddit_mockup/: index.html
comment_templates/example/: index.html
comment_templates/light_reddit_mockup/: index.html
comment_templates/old_reddit_mockup/: index.html  index_old.html  snipped.css
comments/: screenshot.py
config/: auth-env.py  auth-example.py  settings.py
dependencies/scripts/: postCreateCommand.sh
docs/: ERRORS.md  FEATURES.md  OrderOfEvents.md  edge-tts-voices.md  notes.md
publish/: login.py  upload.py  youtube.py
reddit/: reddit.py
speech/: speech.py  streamlabs_polly.py  tiktok.py
src/rybo/: __init__.py  logging.py
src/rybo/cli/: __init__.py  rybo.py
src/rybo/commands/: __init__.py
src/rybo/comments/: __init__.py  screenshot.py
thumbnail/: keywords.py  lexica.py  thumbnail copy.py  thumbnail.py
utils/: base64_encoding.py  common.py
video_generation/: video.py
(+23 files in other folders)
